# stm32-utility-traits

./: Cargo.toml  README.md
src/: device_info.rs  lib.rs
